cabal-version:  3.0
name:           botanium
version:        0.0.1
license:        BSD-3-Clause
author:         Leo D.
maintainer:     leo@apotheca.io
build-type:     Simple
description:
    Libsodium-style interface for the Botan cryptography library

source-repository head
  type:     git
  location: https://github.com/haskellfoundation/botan.git

library
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        InstanceSigs
        NoImplicitPrelude
        OverloadedStrings
        PatternSynonyms
        ScopedTypeVariables
        TupleSections
    exposed-modules:
        Botanium.AEAD
        Botanium.Auth
        Botanium.Box
        Botanium.Hash
        Botanium.OneTimeAuth
        Botanium.Password
        -- Botanium.ScalarMult
        Botanium.SecretBox
        Botanium.Sign
        Botanium.Stream
        Botanium.Utils
    other-modules:
        Botanium.Prelude
        Paths_botanium
    build-depends:
        base >= 4 && < 5,
        botan,
        botan-bindings,
        botan-low,
        bytestring,
        deepseq,
        text
    -- cc-options:     -Wall
    -- ghc-options:    -Wall -funbox-strict-fields     
