cabal-version:  3.0
name:           crypto-schemes-botan
version:        0.0.1
license:        BSD-3-Clause
author:         Leo D.
maintainer:     leo@apotheca.io
build-type:     Simple
description:
    Botan backend for `crypto-schemes`

source-repository head
  type:     git
  location: https://github.com/apotheca/botan.git

library
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        DerivingStrategies
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        NoImplicitPrelude
        OverloadedStrings
        TypeApplications
        TypeFamilies
    exposed-modules:
        Crypto.Hash.MD5
        Crypto.Hash.SHA3
    other-modules:
        Paths_crypto_schemes_botan
    build-depends:
        base >= 4 && < 5,
        botan,
        bytestring,
        crypto-schemes,
        text
    -- cc-options:     -Wall
    -- ghc-options:    -Wall -funbox-strict-fields     
