cabal-version:  3.0
name:           crypto-schemes
version:        0.0.1
license:        BSD-3-Clause
author:         Leo D.
maintainer:     leo@apotheca.io
build-type:     Simple
description:
    Cryptography schemes

source-repository head
  type:     git
  location: https://github.com/apotheca/botan.git

library
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        DataKinds
        DefaultSignatures
        DerivingStrategies
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        MultiParamTypeClasses
        NoImplicitPrelude
        OverloadedStrings
        RankNTypes
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
    exposed-modules:
        Crypto.AEAD
        Crypto.Auth
        Crypto.ByteVector
        Crypto.Cipher
        Crypto.ErrorCorrection
        Crypto.Hash
        Crypto.Prelude
        Crypto.Public
        Crypto.Random
        Crypto.Scrubbed
    other-modules:
        Paths_crypto_schemes
    build-depends:
        base >= 4 && < 5,
        bytestring,
        text
    -- cc-options:     -Wall
    -- ghc-options:    -Wall -funbox-strict-fields     
